# discord-ext-songbird

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
dext_songbird/: client.py
src/: lib.rs
