[package]
name = "dext-songbird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dext_songbird"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
songbird = { version = "0.3.2", features = ["driver"] }
